navbar and spacing issues

--- a/css/webpond2.css
+++ b/css/webpond2.css
@@ -1,7 +1,7 @@
 
 li.ui-li img {
     float: left;
-    padding: 0.5em 15px 0px 0px;
+    margin: 0.5em 15px 0px 0px;
 }
 
 li.ui-li p.username {
